@@ -1,3 +1,9 @@
+2005-02-24	Benedikt Meurer <benny@xfce.org>
+
+	* settings/splash/module.c(module_test): Call start() if provided by
+	  a splash engine, so engine developers can properly test their
+	  modules.
+
 2005-01-27	Benedikt Meurer <benny@xfce.org>
 
 	* Removed autogenerated files from CVS.
